position fixed and align-items removed from fixed-container

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -66,7 +66,7 @@ body {
 /* new-playlist */
 .new-playlist {
     font-weight: bold;
-    height: calc(100vh - 400px);
+    height: calc(100vh - 360px);
     overflow: hidden;
 }
 
@@ -93,7 +93,7 @@ body {
 
 .new-playlist div {
     overflow: auto;
-    max-height: 85%;
+    max-height: 100%;
 }
 
 .new-playlist div ul {
@@ -118,13 +118,9 @@ body {
 
 /* .fixed-container */
 .fixed-container {
-    width: 250px;
+    width: 100%;
     font-weight: bold;
     height: fit-content;
-    position: fixed;
-    bottom: 100px;
-    left: 0;
-    z-index: 1;
     background-color: #000;
 }
 
